5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1756_1583.log
== TEST (2019-05-28 10:39:40) 
-- CODE:
from numpy import*

a = input()

s1 = array([], dtype = str)

i = 0
j = 0
while(i <len(s)):
	if(i % 3 == 0 and i!= 0):
		s1 = append(s1, [s[1-3:i] + "."])
		j= i
	i = i +1
s1 = append(s1, [s[j:]])
s = ""
i=0
while(i<size(s1))
	s= s +s1[i]
	i = i+1
print(s)

-- ERROR:
File "XXXX", line 17
    while(i<size(s1))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:39:49) 
-- CODE:
from numpy import*

a = input()

s1 = array([], dtype = str)

i = 0
j = 0
while(i <len(s)):
	if(i % 3 == 0 and i!= 0):
		s1 = append(s1, [s[1-3:i] + "."])
		j= i
	i = i +1
s1 = append(s1, [s[j:]])
s = ""
i=0
while(i<size(s1)):
	s= s +s1[i]
	i = i+1
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:49:01) 
-- CODE:
from numpy import*

a = input()

s1 = array([], dtype = str)

i = 0
j = 0
while(i < len(s)):
	if(i % 3 == 0 and i!= 0):
		s1 = append(s1, [s[1-3:i] + "."])
		j= i
	i = i +1
	
s1 = append(s1, [s[j:]])

s = ""
i=0
while(i<size(s1)):
	s= s +s1[i]
	i = i+1
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:56:30) 
-- CODE:
from numpy import*

s= input()

s1 = array([], dtype = str)

i= 0
j= 0
while(i <len(s)):
	if(1% 3 == 0 and i != 0):
		s1= append(s1,[i - 3:i]+".")
		j = i
	i = i +1
	
s1 = append(s1,[s[j:]])
s=""
i=0
while(i< size(s1)):
	s=s+s1[i]
	i=i+1
print(s)
-- ERROR:
File "XXXX", line 11
    s1= append(s1,[i - 3:i]+".")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:58:23) 
-- CODE:
from numpy import*

s= input()

s1 = array([], dtype = str)

i= 0
j= 0
while(i <len(s)):
	if(1 % 3 == 0 and i != 0):
		s1= append(s1,[s[i - 3:i]+"."])
		j = i
	i = i +1
	
s1 = append(s1,[s[j:]])
s=""
i=0
while(i< size(s1)):
	s=s+s1[i]
	i=i+1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:59:48) 
-- CODE:
from numpy import*

s= input()

s1 = array([], dtype = str)

i= 0
j= 0
while(i <len(s)):
	if(1 % 3 == 0 and i != 0):
		s1= append(s1,[s[i- 3:i]+ "."])
		j = i
	i = i +1
	
s1 = append(s1,[s[j:]])
s=""
i=0
while(i< size(s1)):
	s=s+s1[i]
	i=i+1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:59:56) 
-- CODE:
from numpy import*

s= input()

s1 = array([], dtype = str)

i= 0
j= 0
while(i <len(s)):
	if(1 % 3 == 0 and i != 0):
		s1= append(s1,[s[i- 3:i]+ "."])
		j = i
	i = i +1
	
s1 = append(s1,[s[j:]])
s=""
i=0
while(i< size(s1)):
	s=s+s1[i]
	i=i+1
print(s)
-- EXECUTION TIME:
0.441283
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123456789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987654321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:00:44) 
-- CODE:
from numpy import*

s= input()

s1 = array([], dtype = str)

i= 0
j= 0
while(i <len(s)):
	if(i % 3 == 0 and i != 0):
		s1= append(s1,[s[i- 3:i]+ "."])
		j = i
	i = i +1
	
s1 = append(s1,[s[j:]])
s=""
i=0
while(i< size(s1)):
	s=s+s1[i]
	i=i+1
print(s)
-- EXECUTION TIME:
0.319635
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
